--- a/share/word_style.css
+++ b/share/word_style.css
@@ -18,7 +18,8 @@ form {
     flex-direction: column;
 }
 
-input {
+input[type="text"],
+input[type="radio"] {
     margin: 5px 0;
     padding: 10px;
     width: 300px;
@@ -53,4 +54,25 @@ li {
     border-radius: 5px;
     width: 400px;
     text-align: left;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.deleteButton {
+    background-color: #dc3545;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    padding: 5px;
+}
+
+.deleteButton:hover {
+    background-color: #c82333;
+}
+
+.submitButton {
+    margin: 0 auto;
+    margin-top: 20px;
 }
